fix: overflow issues card content

--- a/components/card.scss
+++ b/components/card.scss
@@ -63,6 +63,7 @@
 
     display: block;
     padding: 0 $card-padding-x $card-padding-y;
+    overflow: visible;
     overflow-x: scroll;
   }
 
